                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-07-2005 fixed: Crash on up folder from root of library view.
 - 09-07-2005 fixed: Milkdrop - audio conversion fixed and cache size for preset loading increased.
 - 09-07-2005 fixed: my music, after start of scanning no control has the focus
 - 09-07-2005 updated: German language file
 - 09-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 09-07-2005 updated: Updated Swedish strings.xml Thanks limit"
 - 09-07-2005 changed: removed CUtil::FileExists() and replaced by CFile::Exists()
 - 09-07-2005 changed: cleaned up CFile and CDirectory and their usage
                       The CFile functions Exists, Stat, Delete, Rename, Cache are static now
 - 09-07-2005 fixed: SF bug [ 1235092 ] Web Interface Partially broken.
 - 09-07-2005 fixed: SF bug [ 1234932 ] Small navigation bug in Music Library view.
 - 09-07-2005 fixed: MP3 bitrate/duration reading was out.
 - 09-07-2005 added: HTTPAPI: Rotate and Flash parameters to TakeScreenshot command
 - 09-07-2005 added: HTTPAPI: Put in place the framework for exposing the HTTPAPI commands through ASP. So far just GetCurrentlyPlaying is available.
 - 08-07-2005 changed: New default keymap.xml - more consistent than before.
 - 08-07-2005 changed: Nicer handling of thumb stick actions - should cause less conflicts.
 - 08-07-2005 changed: Dialog closing moved to base class.
 - 08-07-2005 added: conditional visibility to video and vis controls.
 - 08-07-2005 fixed: MP3's with two or more large id3v2 tags would not play in paplayer.
 - 08-07-2005 changed: simplified the way adding codecs to paplayer